Version 1 (unreleased)

- Top level field "Version" is required from now on